pdf versons of all figs

--- a/eeg/plot_spectral.ipynb
+++ b/eeg/plot_spectral.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "1adc07e2",
    "metadata": {},
    "outputs": [],
@@ -12,6 +12,9 @@
     "\n",
     "import matplotlib\n",
     "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "# const\n",
     "CLEAN_ROOT = \"/mnt/d/work/eeg_smokers_data/clean\"\n",
     "SUBJECT = \"S02\""
@@ -19,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "a2eda9ff",
    "metadata": {},
    "outputs": [
@@ -27,17 +30,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening raw data file /mnt/d/work/eeg_smokers_data/clean/S02_clean.fif...\n",
-      "    Range : 60000 ... 930039 =    120.000 ...  1860.078 secs\n",
-      "Ready.\n",
-      "Reading 0 ... 870039  =      0.000 ...  1740.078 secs...\n"
+      "Opening raw data file /mnt/d/work/eeg_smokers_data/clean/S02_clean.fif...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_23480/1223539646.py:3: RuntimeWarning: This filename (/mnt/d/work/eeg_smokers_data/clean/S02_clean.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "/tmp/ipykernel_6928/1223539646.py:3: RuntimeWarning: This filename (/mnt/d/work/eeg_smokers_data/clean/S02_clean.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
       "  eeg_data = mne.io.read_raw_fif(fif_file, preload=True)\n"
      ]
     },
@@ -45,6 +45,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "    Range : 60000 ... 930039 =    120.000 ...  1860.078 secs\n",
+      "Ready.\n",
+      "Reading 0 ... 870039  =      0.000 ...  1740.078 secs...\n",
       "Effective window size : 4.096 (s)\n"
      ]
     }
@@ -61,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "id": "67f8dd23",
    "metadata": {},
    "outputs": [
@@ -113,12 +116,14 @@
     "ax.set_ylabel(\"Power Spectral Density (dB)\")\n",
     "ax.set_title(\"Power Spectrum Density Example\")\n",
     "plt.tight_layout()\n",
+    "fig.savefig(\"../figs/spectral_example_1.pdf\", format=\"pdf\", bbox_inches=\"tight\")\n",
+    "fig.savefig(\"../figs/spectral_example_1.png\", format=\"png\", bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "id": "6ed8451f",
    "metadata": {},
    "outputs": [
@@ -170,6 +175,8 @@
     "ax.set_ylabel(r\"Power Spectral Density ($\\mu V^2/\\mathrm{Hz}$)\")\n",
     "ax.set_title(\"Power Spectrum Density Example (Linear Scale)\")\n",
     "plt.tight_layout()\n",
+    "fig.savefig(\"../figs/spectral_example_2.pdf\", format=\"pdf\", bbox_inches=\"tight\")\n",
+    "fig.savefig(\"../figs/spectral_example_2.png\", format=\"png\", bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   }
